syntax = "proto3";

package utility;

message IpAddress {
    string ip = 1;
    int32 port = 2;
}

message AddressTable { map<string, IpAddress> address_table = 1; }
